Stop overlap on start page betwen text and image

--- a/client/src/routes/Landing/styles.scss
+++ b/client/src/routes/Landing/styles.scss
@@ -1,5 +1,11 @@
 @import '../../styles/mixins/mixins.scss';
 
+@mixin small-screen-adjustment {
+  @media (max-width: 970px) {
+    @content;
+  }
+}
+
 .landing__wrapper {
   background: url(./src/assets/icons/report-bg-landing-page.svg);
   background-repeat: no-repeat;
@@ -9,7 +15,7 @@
   width: 100%;
   z-index: 1;
 
-  @media (max-width: 800px) {
+  @include small-screen-adjustment {
     background: url(./src/assets/icons/report-bg-landing-page-mobile.jpg);
     background-repeat: no-repeat;
     background-position-x: 0;
@@ -47,11 +53,7 @@
     bottom: -80px;
     z-index: 1;
 
-    @media (max-width: 800px) {
-      height: 600px;
-      width: 60%;
-      background-size: 100%;
-      bottom: -325px;
+    @include small-screen-adjustment {
       display: none;
     }
   }
@@ -77,7 +79,7 @@
     z-index: 2;
     position: relative;
 
-    @media (max-width: 800px) {
+    @include small-screen-adjustment {
       margin-top: 30px;
     }
 
@@ -113,7 +115,7 @@
       div + div {
         margin-left: 30px;
 
-        @media (max-width: 800px) {
+        @include small-screen-adjustment {
           margin-left: 7px;
         }
       }
@@ -122,7 +124,7 @@
     button {
       margin-top: 30px;
 
-      @media (max-width: 800px) {
+      @include small-screen-adjustment {
         margin-top: 0;
       }
     }
